Fix "Author profile links not working on mobile" (#2440)

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -242,6 +242,7 @@
 
   &.is--visible {
     display: block;
+		z-index: 1;
   }
 
   @include breakpoint($large) {
